# py-dhampyr

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
dhampyr/: __init__.py  api.py  builtins.py  config.py  context.py  converter.py  decorators.py  failures.py  requirement.py  util.py  validator.py  variable.py  verifier.py
tests/: test_api.py  test_config.py  test_context.py  test_converter.py  test_decorators.py  test_examples.py  test_failures.py  test_path.py  test_requirement.py  test_result.py  test_validations.py  test_validator.py  test_variable.py  test_verifier.py  test_verifier_method.py
