[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dhampyr"
version = "1.0.0"
authors = [
  { name="sozuberry", email="sozuberry@gmail.com" },
]
description = "Python simple validator for dict-like objects"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "typing_extensions",
]

[project.urls]
"Homepage" = "https://github.com/sozu/py-dhampyr"